unified user preferences, separated plugin management and user prefs views